Fix:Align position of filters for responsiveness

--- a/src/pages/products/ProductList.css
+++ b/src/pages/products/ProductList.css
@@ -14,7 +14,9 @@
     text-align: center;
 }
 
-
+.page-header__filters {
+    text-align: end;
+}
 
 .product__checkout-btn-sticky {
     width: 10rem;
